# mdit-py-cjk-friendly

./: CHANGELOG.md  README.en.md  README.ja.md  README.ko.md  README.md  README.zh-TW.md  README.zh.md  pyproject.toml
.github/workflows/: publish.yml
src/mdit_py_cjk_friendly/: __init__.py
tests/: test_bouten.py  test_plugin.py  test_ruby.py
